# MPI_tests

./: CMakeLists.txt  Gaus_1.cpp  Gauss.cpp  eight.cpp  eleven.cpp  five.cpp  four.cpp  main.cpp  nine.cpp  second.cpp  seven.cpp  six.cpp  ten.cpp  third.cpp  twelve.cpp
